--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="jumbotron text-center bg-light mb-0">
       <h1 class="display-4 font-weight-bold text-uppercase">My Visual Diary</h1>
       <p></p>
-      <p class="lead mb-0">일기를 작성하고, 인공지능으로 생성한 나만의 그림을 모아보세요!</p>
+      <p class="lead mb-0">일기를 작성하고, 인공지능으로 생성한 나만의 그림 앨범을 제작해 보세요!</p>
     </div>
   </div>
 
